--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -17,6 +17,16 @@
     <meta property="og:title" content="{{ page.title }}">
     <meta name="description" content="Harish Chakravarthy @harishvc -- Intrapreneur leveraging technology to make a positive difference. Interests include #UX #DataViz & #Analytics">
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
+    <!-- Include GA code -->
+     <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+         ga('create', 'UA-47735548-1', 'harishvc.github.io');
+         ga('send', 'pageview');
+     </script>
   </head>
 
   <body{% if page.wide_layout %} class="wide"{% endif %}>
