--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{% if page.title %}{{ page.title }} &mdash; {% endif %}</title>
+    <script src="/js/jquery-2.0.3.min.js"></script> 
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen, projection" href="/css/screen.css" type="text/css">
@@ -13,6 +15,16 @@
     <meta property="og:title" content="{{ page.title }}">
     <meta name="description" content="Harish Chakravarthy @harishvc -- Intrapreneur leveraging technology to make a positive difference. Interests include #UX #DataViz & #Analytics">
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
+    <!-- Include GA code -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+         ga('create', 'UA-47735548-1', 'harishvc.github.io');
+         ga('send', 'pageview');
+     </script>
   </head>
 
   <body{% if page.wide_layout %} class="wide"{% endif %}>
@@ -20,7 +32,7 @@
       <h1 class="logo">
            <a href="/">
            <img src="/pics/harishvc.jpeg" width="50" height="50" alt="Harish"/>
-           <span style="white-space: nowrap;">Making Connections &amp; Getting Creative</span>
+           <span style="white-space: nowrap;">Connecting ideas &amp; Getting Creative</span>
            </a>
       </h1>
       <ul class="navigation">
