--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -2,49 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{ page.title }} &mdash; {% endif %}</title>
+    <title>{{ page.title }}|{{site.tagline}}</title>
     <script src="/js/jquery-2.0.3.min.js"></script> 
     <script src="/js/jquery.collagePlus.min.js"></script>
     <script src="/js/jquery.removeWhitespace.min.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen, projection" href="/css/screen.css" type="text/css">
-    <link rel="stylesheet" media="screen, projection" href="/css/enhancements.css" type="text/css">
+    <link rel="stylesheet" media="screen, projection" href="/css/site.css" type="text/css">
+    <link rel="stylesheet" media="screen, projection" href="/css/pygments.css" type="text/css">
+    <link rel="stylesheet" media="screen, projection" href="/css/font-awesome.min.css" type="text/css">   
     <link rel="stylesheet" media="print" href="/css/print.css" type="text/css">
     <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@harishvc">
-    <meta property="og:title" content="{{ page.title }}">
-    <meta name="description" content="Harish Chakravarthy @harishvc -- Intrapreneur leveraging technology to make a positive difference. Interests include #UX #DataViz & #Analytics">
+    <meta name="author" content="Harish Chakravarthy">
+    <meta name="description" content="{{ page.excerpt }}">
+    <meta name="keywords" content="{{ page.keywords }}">
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     <!-- Include GA code -->
-     <script>
+    <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
          ga('create', 'UA-47735548-1', 'harishvc.github.io');
          ga('send', 'pageview');
      </script>
-  </head>
-
-  <body{% if page.wide_layout %} class="wide"{% endif %}>
-    <header>
-      <h1 class="logo">
-           <a href="/">
-           <img src="/pics/harishvc.jpeg" width="50" height="50" alt="Harish"/>
-           <span style="white-space: nowrap;">Connecting ideas &amp; Getting Creative</span>
-           </a>
-      </h1>
-      <ul class="navigation">
-        <!--
-        <li><a href="http://github.com/harishvc/" title="github">github</a></li>
-        <li><a href="http://twitter.com/harishvc/">twitter</a><li>
-        <li><a href="http://linkedin.com/in/harishvc/">linkedin</a></li>
-        -->
-      </ul>
-      <script>
+     <script>
 $(document).ready(function(){
             collage();
      });
@@ -58,21 +39,29 @@ $(document).ready(function(){
             }
         );
     };
-</script>
+</script>     
+  </head>
 
-    </header>
+  <body>
+    <div class="navbar navbar-static-top hidden-print">
+    <div class="navbar-inner">
+     <div class="container offset1">
+           <span class="brand"><i class="fa fa-lightbulb-o fa-3x"></i><a href="/" style="color:inherit">&nbsp;{{site.tagline}}</a></span>
+    </div>  
+  </div>
+   </div>
+
     <!--div class="wrapper content"-->
       {{ content }}
-    <!--/div-->
     
     {% unless page.no_footer %}
     <footer>
-            <p>
-                <span style="padding-right:10px"><a href="http://github.com/harishvc/">Github</a></span>
-                <span style="padding-right:10px"><a href="http://twitter.com/harishvc/">Twitter</a></span>
-                <span style="padding-right:10px"><a href="http://linkedin.com/in/harishvc/">LinkedIn</a></span>
+            <div class="contained text-center">Handmade with love &amp; pride by Harish Chakravarthy. Powered by Github.</br>
+                <span style="padding-right:10px;white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"> Github</i></a></span>
+                <span style="padding-right:10px;white-space: nowrap"><a href="http://twitter.com/harishvc/"><i class="fa fa-twitter"></i> Twitter</a></span>
+                <span style="padding-right:10px;white-space: nowrap"><a href="http://linkedin.com/in/harishvc/"><i class="fa fa-linkedin"></i> LinkedIn</a></span>
 
-           </p>
+           </div>
     </footer>
    {% endunless %}
 
