--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-<div class="content{% if page.photo_url %} photo-post{% endif %}">
-  <div class="post single">
+<div class="container">
+ <section class="row">
+  <div class="span12">
+  <div class="post">
     {% unless page.photo_url %}
     <h1>{{ page.title }}</h1>
     <info datetime="{{ page.date | date: "%Y-%m-%d" }}">
@@ -10,7 +12,7 @@ layout: default
     </info>
     {% endunless %}
     <div class="body">{{ content }}</div>
-    <!-- <div class="breaker"></div> -->
     <div class="breaker"></div>
   </div>
+ </div>
 </div>
