fix validation errors

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     
     {% unless page.no_footer %}
     <footer>
-            <div class="contained text-center">Handmade with love &amp; pride by Harish Chakravarthy. Powered by Github.</br>
+            <div class="contained text-center">Handmade with passion &amp; pride by Harish Chakravarthy. Powered by Github.<br/>
                 <span style="padding-right:10px;white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"> Github</i></a></span>
                 <span style="padding-right:10px;white-space: nowrap"><a href="http://twitter.com/harishvc/"><i class="fa fa-twitter"></i> Twitter</a></span>
                 <span style="padding-right:10px;white-space: nowrap"><a href="http://linkedin.com/in/harishvc/"><i class="fa fa-linkedin"></i> LinkedIn</a></span>
