--- a/css/site.css
+++ b/css/site.css
@@ -687,9 +687,11 @@ ol ol,
 ol ul {
   margin-bottom: 0;
 }
-li {
-  line-height: 23px;
-}
+
+//li {
+  //line-height: 23px;
+//}
+
 ul.unstyled,
 ol.unstyled {
   margin-left: 0;
