--- a/css/site.css
+++ b/css/site.css
@@ -3284,7 +3284,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   float: left;
   display: block;
-  padding: 38.5px 20px 38.5px;
+  //padding: 38.5px 20px 38.5px;
+  padding: 10px 5px 5px;
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
@@ -6358,7 +6359,7 @@ body {
 }
 .post {
   text-align: justify;
-  font-size: 18px;
+  font-size: 25px;
   line-height: 1.75em;
 }
 .post h1 {
