underline hyperlinks except header, consistent font size, text align left

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <div class="navbar navbar-static-top hidden-print">
     <div class="navbar-inner">
      <div class="container offset1">
-           <span class="brand"><i class="fa fa-lightbulb-o fa-3x"></i><a href="/" style="color:inherit">&nbsp;{{site.tagline}}</a></span>
+           <span class="brand"><i class="fa fa-lightbulb-o fa-3x"></i><a href="/" style="color:inherit;text-decoration: none">&nbsp;{{site.tagline}}</a></span>
     </div>  
   </div>
    </div>
