--- a/css/site.css
+++ b/css/site.css
@@ -215,7 +215,7 @@ body {
 }
 a {
   //color: #c83025;
-  text-decoration: none;
+  //text-decoration: none;
 }
 a:hover,
 a:focus {
@@ -643,7 +643,7 @@ h3 {
   line-height: 46px;
 }
 h1 {
-  font-size: 44px;
+  font-size: 38px;
 }
 h2 {
   font-size: 36px;
@@ -6358,13 +6358,13 @@ body {
   font-weight: 700;
 }
 .post {
-  text-align: justify;
+  //text-align: justify;
   font-size: 25px;
   line-height: 1.75em;
 }
 .post h1 {
   margin-bottom: .75em;
-  font-size: 50px;
+  //font-size: 50px;
   line-height: .9em;
   //text-align: center;
   text-align: left;
