--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,17 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}|{{site.tagline}}</title>
-    <script src="/js/jquery-2.0.3.min.js"></script> 
-    <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen, projection" href="/css/site.css" type="text/css">
-    <link rel="stylesheet" media="screen, projection" href="/css/pygments.css" type="text/css">
-    <link rel="stylesheet" media="screen, projection" href="/css/font-awesome.min.css" type="text/css">   
-    <link rel="stylesheet" media="print" href="/css/print.css" type="text/css">
-    <link rel="shortcut icon" href="/favicon.ico">
     <meta name="author" content="Harish Chakravarthy">
     <meta name="description" content="{{ page.excerpt }}">
     <meta name="keywords" content="{{ page.keywords }}">
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
+ 
+    <link rel="stylesheet" media="screen, projection" href="/css/font-awesome.min.css" type="text/css">   
+    <!--  <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'> -->
+ 
+ 
+    <!-- original: http://getbootstrap.com/examples/theme/ -->
+    <!-- Bootstrap core CSS -->
+    <link href="/css2/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="/css2/theme.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <!-- 
+    <link href="/css/theme.css" rel="stylesheet">
+    <link href="/css/enhancements.css" rel="stylesheet">
+    -->
+    
+ 
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <!-- Include GA code -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -25,22 +44,38 @@
      </script>
   </head>
 
-  <body>
-    <div class="navbar navbar-static-top hidden-print">
-    <div class="navbar-inner">
-     <div class="container offset1">
-           <span class="brand"><i class="fa fa-lightbulb-o fa-3x"></i><a href="/" style="color:inherit;text-decoration: none">&nbsp;{{site.tagline}}</a></span>
-    </div>  
-  </div>
-   </div>
+  <body role="document">
 
-    <!--div class="wrapper content"-->
-      {{ content }}
+    <!-- Fixed navbar -->
+     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-3x"></i>Connecting Ideas &amp; Getting Creative</span>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/" style="color:#ffffff;padding-top:50px;text-decoration: none">Home</a></li>
+            <li><a href="/about" style="color:#ffffff;padding-top:50px;text-decoration: none">About</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+     </div>
+
+  
+       <div class="container theme-showcase" role="main">
+        {{ content }}
+    </div>
     
     {% unless page.no_footer %}
     <footer>
             <div class="contained text-center">Handmade with passion &amp; pride by Harish Chakravarthy. Powered by Github.<br/>
-                <span style="padding-right:10px;white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"> Github</i></a></span>
+                <span style="padding-right:10px;white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"></i> Github</a></span>
                 <span style="padding-right:10px;white-space: nowrap"><a href="http://twitter.com/harishvc/"><i class="fa fa-twitter"></i> Twitter</a></span>
                 <span style="padding-right:10px;white-space: nowrap"><a href="http://linkedin.com/in/harishvc/"><i class="fa fa-linkedin"></i> LinkedIn</a></span>
 
@@ -48,5 +83,11 @@
     </footer>
    {% endunless %}
 
+
+     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery-2.0.3.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/docs.min.js"></script>
+    
   </body>
 </html>
