--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,32 +7,16 @@
     <meta name="description" content="{{ page.excerpt }}">
     <meta name="keywords" content="{{ page.keywords }}">
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
- 
-    <link rel="stylesheet" media="screen, projection" href="/css/font-awesome.min.css" type="text/css">   
-    <!--  <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic' rel='stylesheet' type='text/css'> -->
- 
- 
-    <!-- original: http://getbootstrap.com/examples/theme/ -->
-    <!-- Bootstrap core CSS -->
-    <link href="/css2/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <link href="/css2/theme.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <!-- 
-    <link href="/css/theme.css" rel="stylesheet">
-    <link href="/css/enhancements.css" rel="stylesheet">
-    -->
-    
- 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <link href="/css2/bootstrap.css" rel="stylesheet"/>
+    <link href="/css2/theme.css" rel="stylesheet"/>
+    <link href="/css/font-awesome.min.css" rel="stylesheet"/>   
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
     <!-- Include GA code -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
