changes for HTML validation

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
        <div class="datetime=" style="padding-bottom:15px">{{ page.date | date: "%b %d, %Y" }}</div>
        {% endunless %}
        <div class="body">{{ content }}</div>
-     </div>
-    </div>
- </section>
-</div>
+     </div> <!-- end post -->
+    </div> <!-- end span12 -->
+ </section> <!-- end row -->
+</div> <!-- end container -->
