--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -41,7 +41,7 @@
 .bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
 	position: absolute;
-	bottom: -30px;
+	//bottom: -30px;
 	width: 100%;
 }
 
@@ -65,7 +65,7 @@
 	font-size: .85em;
 	font-family: Arial;
 	font-weight: bold;
-	color: #666;
+	color: #9d261d;
 	padding-top: 20px;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a {
-	background: #666;
+	background: #9d261d;
 	text-indent: -9999px;
 	display: block;
 	width: 10px;
@@ -189,7 +189,7 @@
 }
 
 .bx-wrapper .bx-caption span {
-	color: #fff;
+	color: #9d261d;
 	font-family: Arial;
 	display: block;
 	font-size: .85em;
