--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/" style="color:#ffffff;padding-top:50px;text-decoration: none">Home</a></li>
+            <li><a href="/tag" style="color:#ffffff;padding-top:50px;text-decoration: none">Tag Cloud</a></li>
             <li><a href="/about" style="color:#ffffff;padding-top:50px;text-decoration: none">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
