--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     <link href="/css2/bootstrap.css" rel="stylesheet"/>
     <link href="/css2/theme.css" rel="stylesheet"/>
+    <link href="/css/enhancements.css" rel="stylesheet"/>
     <link href="/css/font-awesome.min.css" rel="stylesheet"/>   
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
