--- a/_layouts/page-default.html
+++ b/_layouts/page-default.html
@@ -49,13 +49,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-3x"></i>Connecting Ideas &amp; Getting Creative</span>
+          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas &amp; Getting Creative</span>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/" style="color:#ffffff;padding-top:50px;text-decoration: none">Home</a></li>
-            <li><a href="/tag" style="color:#ffffff;padding-top:50px;text-decoration: none">Tag Cloud</a></li>
-            <li><a href="/about" style="color:#ffffff;padding-top:50px;text-decoration: none">About</a></li>
+          	<li><a href="/tag" title="tag cloud" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-tags"></i> Tags</a></li>
+            <li><a href="/about" title="about" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-user"></i> About</a></li>
+            <li><a href="/" title="home" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-home"></i> Home</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
