set breakpoints, ude default for code, underline hyperlinks

--- a/less/theme.less
+++ b/less/theme.less
@@ -44,7 +44,7 @@
   }
 
   &:active,
-  &.active {
+  &:active {
     background-color: darken(@btn-color, 12%);
     border-color: darken(@btn-color, 14%);
   }
