--- a/less/navbar.less
+++ b/less/navbar.less
@@ -179,7 +179,7 @@
 .navbar-toggle {
   position: relative;
   float: right;
-  margin-right: @navbar-padding-horizontal;
+  //margin-right: @navbar-padding-horizontal;
   padding: 9px 10px;
   .navbar-vertical-align(34px);
   background-color: transparent;
@@ -422,11 +422,11 @@
   }
 
   .navbar-toggle {
-    border-color: @navbar-default-toggle-border-color;
-    &:hover,
-    &:focus {
-      background-color: @navbar-default-toggle-hover-bg;
-    }
+    //border-color: @navbar-default-toggle-border-color;
+    //&:hover,
+    //&:focus {
+      //background-color: @navbar-default-toggle-hover-bg;
+    //}
     .icon-bar {
       background-color: @navbar-default-toggle-icon-bar-bg;
     }
@@ -498,7 +498,7 @@
 
 .navbar-inverse {
   background-color: @navbar-inverse-bg;
-  border-color: @navbar-inverse-border;
+  //border-color: @navbar-inverse-border;
 
   .navbar-brand {
     color: @navbar-inverse-brand-color;
@@ -543,11 +543,11 @@
 
   // Darken the responsive nav toggle
   .navbar-toggle {
-    border-color: @navbar-inverse-toggle-border-color;
-    &:hover,
-    &:focus {
-      background-color: @navbar-inverse-toggle-hover-bg;
-    }
+    //border-color: @navbar-inverse-toggle-border-color;
+    //&:hover,
+    //&:focus {
+      //background-color: @navbar-inverse-toggle-hover-bg;
+    //}
     .icon-bar {
       background-color: @navbar-inverse-toggle-icon-bar-bg;
     }
