--- a/css2/bootstrap.css
+++ b/css2/bootstrap.css
@@ -387,7 +387,13 @@ h6 .small,
 }
 h1,
 .h1 {
-  margin-top: 100px;
+  margin-top: 115px;
+}
+@media (min-width: 1000px) {
+  h1,
+  .h1 {
+    margin-top: 100px;
+  }
 }
 h2,
 .h2,
