--- a/_layouts/page-default.html
+++ b/_layouts/page-default.html
@@ -34,7 +34,8 @@
     <script src="/js/jquery.bxslider.min.js"></script>
     <!-- bxSlider CSS file -->
     <link href="/css/jquery.bxslider.css" rel="stylesheet" />
-
+  <!-- Include Twitter Analytics -->
+  <meta property="twitter:account_id" content="190820631" />
   </head>
 
   <body role="document">
