--- a/_layouts/page-default.html
+++ b/_layouts/page-default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}|{{site.tagline}}</title>
+    <title>{{ page.title }}</title>
     <meta name="author" content="Harish Chakravarthy">
     <meta name="description" content="{{ page.excerpt }}">
     <meta name="keywords" content="{{ page.keywords }}">
