move banner header to the center and add shadow

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
- <section class="row">
+ <section class="row" style="margin-left:10px;margin-right:10px">
    <div class="span12">
      <div class="post">
       {% unless page.photo_url %}
@@ -22,5 +22,5 @@ layout: default
      </div> <!-- end post -->
     </div> <!-- end span12 -->
  </section> <!-- end row -->
-</div> <!-- end container -->
   {% include bio.html %}
+</div> <!-- end container -->
