--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <meta name="author" content="Harish Chakravarthy">
-    <meta name="description" content="{{ page.excerpt }}">
-    <meta name="keywords" content="{{ page.keywords }}">
-    <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
+    <meta name="author" content="Harish Chakravarthy" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <meta name="description" content="{{ page.excerpt }}" />
+    <meta name="keywords" content="{{ page.keywords }}" />
+    <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}" />
     <link href="/css2/bootstrap.css" rel="stylesheet"/>
-    <link href="/css2/theme.css" rel="stylesheet"/>
+    <!--  <link href="/css2/theme.css" rel="stylesheet"/> -->
     <link href="/css/enhancements.css" rel="stylesheet"/>
     <link href="/css/font-awesome.min.css" rel="stylesheet"/>   
     <script src="/js/jquery-2.0.3.min.js"></script>
@@ -31,51 +33,42 @@
      </script>
   <!-- Include Twitter Analytics -->
   <meta property="twitter:account_id" content="190820631" />
+  
   </head>
 
   <body role="document">
 
     <!-- Fixed navbar -->
-     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
+     <div class="container navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas</span>
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas &amp; Getting Creative</span>
+          </button>   
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/tag" title="tag cloud" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-tags"></i> Tags</a></li>
-            <li><a href="/about" title="about" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-user"></i> About</a></li>
-            <li><a href="/" title="home" style="color:#ffffff;padding-top:25px;text-decoration: none"><i class="fa fa-home"></i> Home</a></li>
+        <div class="collapse navbar-collapse">     
+          <ul class="nav navbar-nav navbar-right" style="padding-top:15px;padding-right:15px;float:right;">          
+            <li><a href="/tag" title="tag cloud" style="color:#ffffff;text-decoration: none"><i class="fa fa-tags"></i> Tags</a></li>
+            <li><a href="/about" title="about" style="color:#ffffff;text-decoration: none"><i class="fa fa-user"></i> About</a></li>
+            <li><a href="/" title="home" style="color:#ffffff;text-decoration: none"><i class="fa fa-home"></i> Home</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
-     </div>
 
-  
-       <div class="container theme-showcase" role="main">
+   
+       <div class="container theme-showcase" role="main" style="box-shadow: 0 0 30px black;">
+         
         {{ content }}
-    </div>
-    
-    {% unless page.no_footer %}
-    <footer>
-            <div class="contained text-center">Handmade with passion &amp; pride by Harish Chakravarthy. Powered by Github.<br/>
-                <span style="padding-right:10px;white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"></i> Github</a></span>
-                <span style="padding-right:10px;white-space: nowrap"><a href="http://twitter.com/harishvc/"><i class="fa fa-twitter"></i> Twitter</a></span>
-                <span style="padding-right:10px;white-space: nowrap"><a href="http://linkedin.com/in/harishvc/"><i class="fa fa-linkedin"></i> LinkedIn</a></span>
-
-           </div>
+       
+    <footer role="footernotes">
+            <div class="contained text-center">Handmade with passion &amp; pride. Powered by Github.</div>
     </footer>
-   {% endunless %}
-
-
-     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/docs.min.js"></script>
+   
+ </div>
+   
     
   </body>
 </html>
