Change mediatype, add shadow and experiement

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -543,7 +543,11 @@
 
   // Darken the responsive nav toggle
   .navbar-toggle {
-    //border-color: @navbar-inverse-toggle-border-color;
+    //HVC
+    border-color: #fff;
+    margin-top:25px;
+    margin-right:45px;
+    
     //&:hover,
     //&:focus {
       //background-color: @navbar-inverse-toggle-hover-bg;
