--- a/less/type.less
+++ b/less/type.less
@@ -71,8 +71,10 @@ h6, .h6 { font-size: @font-size-h6; }
 // Body text
 // -------------------------
 
+//HVC
 p {
   margin: 0 0 (@line-height-computed / 2);
+  //padding: (@line-height-computed / 4) + 1.25;
 }
 
 .lead {
