--- a/less/grid.less
+++ b/less/grid.less
@@ -9,7 +9,14 @@
 
 .container {
   .container-fixed();
-
+  
+  //HVC
+  background-color:#fff;
+  //border-radius: 5px;
+  //padding-right: 30px;
+  //box-shadow: 0 0 30px black;
+  
+  
   @media (min-width: @screen-sm-min) {
     width: @container-sm;
   }
