--- a/less/mixins.less
+++ b/less/mixins.less
@@ -636,11 +636,13 @@
 // -----------
 
 // Centered container element
+//HVC
 .container-fixed() {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  (@grid-gutter-width / 2);
-  padding-right: (@grid-gutter-width / 2);
+  //padding-left:  (@grid-gutter-width / 2);
+  //padding-right: (@grid-gutter-width / 2);
+  //box-shadow: 0 0 30px black;
   &:extend(.clearfix all);
 }
 
