--- a/less/variables.less
+++ b/less/variables.less
@@ -24,7 +24,9 @@
 // ## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+//HVC: @body-bg:               #fff;
+@body-bg:               #F8F8ee;
+
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
@@ -257,19 +259,19 @@
 
 // Extra small screen / phone
 // Note: Deprecated @screen-xs and @screen-phone as of v3.0.1
-@screen-xs:                  500px;
+@screen-xs:                  550px;
 @screen-xs-min:              @screen-xs;
 @screen-phone:               @screen-xs-min;
 
 // Small screen / tablet
 // Note: Deprecated @screen-sm and @screen-tablet as of v3.0.1
-@screen-sm:                  975px;
+@screen-sm:                  768px;
 @screen-sm-min:              @screen-sm;
 @screen-tablet:              @screen-sm-min;
 
 // Medium screen / desktop
 // Note: Deprecated @screen-md and @screen-desktop as of v3.0.1
-@screen-md:                  1000px;
+@screen-md:                  992px;
 @screen-md-min:              @screen-md;
 @screen-desktop:             @screen-md-min;
 
@@ -304,18 +306,20 @@
 //
 //## Define the maximum width of `.container` for different screen sizes.
 
+//HVC: Setting break points for media queries
+
 // Small screen / tablet
-@container-tablet:             ((720px + @grid-gutter-width));
+@container-tablet:             ((768px - @grid-gutter-width));
 //** For `@screen-sm-min` and up.
 @container-sm:                 @container-tablet;
 
 // Medium screen / desktop
-@container-desktop:            ((725px + @grid-gutter-width));
+@container-desktop:            ((992px - @grid-gutter-width));
 //** For `@screen-md-min` and up.
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      ((725px + @grid-gutter-width));
+@container-large-desktop:      ((1200px - @grid-gutter-width));
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
