--- a/less/wells.less
+++ b/less/wells.less
@@ -10,7 +10,8 @@
   margin-bottom: 20px;
   background-color: @well-bg;
   border: 1px solid @well-border;
-  border-radius: @border-radius-base;
+  //HVC
+  border-radius: @border-radius-base/4;
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
   blockquote {
     border-color: #ddd;
