--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
     <meta name="description" content="{{ page.excerpt }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}" />
-    <link href="/css2/bootstrap.css" rel="stylesheet"/>
-    <!--  <link href="/css2/theme.css" rel="stylesheet"/> -->
+    <link href="/css/bootstrap.css" rel="stylesheet"/>
     <link href="/css/enhancements.css" rel="stylesheet"/>
     <link href="/css/font-awesome.min.css" rel="stylesheet"/>   
     <script src="/js/jquery-2.0.3.min.js"></script>
