--- a/less/navbar.less
+++ b/less/navbar.less
@@ -152,7 +152,8 @@
 
 .navbar-brand {
   //float: left;
-  padding: @navbar-padding-vertical @navbar-padding-horizontal;
+  //HVC
+  //padding: @navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   //line-height: @line-height-computed;
   //height: @navbar-height;
