--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="container">
- <section class="row">
+ <section class="row" style="margin-left:0px;margin-right:0px">
    <div class="span12">
      <div class="post">
        <div class="body">{{ content }}</div>
