--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,14 @@
     <!-- Fixed navbar -->
      <div class="container navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
-          <span class="navbar-brand" style="color:#ffffff"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas</span>
+          <span class="navbar-brand visible-sm visible-md visible-lg" style="color:#ffffff;padding-left:15px"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas</span>
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>   
+           <span class="navbar-brand visible-xs" style="color:#ffffff;font-size:25px;padding-left:25px;padding-top:15px"><i class="fa fa-lightbulb-o fa-2x"></i>Connecting Ideas</span>
         </div>
         <div class="collapse navbar-collapse">     
           <ul class="nav navbar-nav navbar-right" style="padding-top:15px;padding-right:15px;float:right;">          
