--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse">     
           <ul class="nav navbar-nav navbar-right" style="padding-top:15px;padding-right:15px;float:right;">          
-            <li><a href="/tag" title="tag cloud" style="color:#ffffff;text-decoration: none"><i class="fa fa-tags"></i> Tags</a></li>
+            <li><a href="/tags" title="tag cloud" style="color:#ffffff;text-decoration: none"><i class="fa fa-tags"></i> Tags</a></li>
             <li><a href="/about" title="about" style="color:#ffffff;text-decoration: none"><i class="fa fa-user"></i> About</a></li>
             <li><a href="/" title="home" style="color:#ffffff;text-decoration: none"><i class="fa fa-home"></i> Home</a></li>
           </ul>
