Change tag line

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
         {{ content }}
        
     <footer role="footernotes">
-            <div class="contained text-center">Handmade with passion &amp; pride. Powered by Github.</div>
+            <div class="contained text-center">Driven by curiosity &amp powered by Github.</div>
     </footer>
    
  </div>
